# sdss-binder

./: .public_binder  README.md  exclude.txt  include.txt  pyproject.toml  requirements.txt  sync.sh  sync_icdb.sh
.github/workflows/: sync-branches.yml
notebooks/: introduction.ipynb
notebooks/lvm/: README.md
notebooks/lvm/3DCubeGen/: Cubegen_example.ipynb  NGC5128  README.md
notebooks/lvm/W28/: 1_nii.ipynb  2_ha.ipynb  3_oiii.ipynb  4_sii.ipynb
notebooks/lvm/spectracles_W28/: two_lines.py
notebooks/lvm/spectracles_single_line/: 1_fit_model.ipynb  2_plot_results.ipynb  config.py
notebooks/marimo/: mwm_boss_clusters.py  mwm_boss_explorer.py  mwm_white_dwarfs.py
sdss_binder/: __init__.py
