[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdss-binder"
version = "0.0.2"
description = "Introduction to using SDSS data with BinderHub"
readme = "README.md"
authors = [
    {name = "Andy Casey"}
]
dependencies = [
    "jupyter-server-proxy",
]

[project.urls]
Homepage = "https://github.com/andycasey/sdss-binder"

[project.entry-points."jupyter_serverproxy_servers"]
intro = "sdss_binder:setup_intro"
marimo = "sdss_binder:setup_marimo"

[tool.setuptools.package-data]
sdss_binder = ["sdss.ico", "sdss.svg", "marimo.svg"]
